--- a/Admin.html
+++ b/Admin.html
@@ -1,83 +1,85 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Panel de Administración - Lo quieres, te lo vendo</title>
-
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
-    <link rel="stylesheet" href="style.css">
-    <style>
-        .admin-nav .nav-link {
-            font-size: 1.25rem;
-            margin-bottom: 1rem;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Panel de Administración - Lo quieres, te lo vendo</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container-fluid">
-        <header class="bg-dark text-white p-3">
-            <div class="d-flex justify-content-between align-items-center">
-                <h1 class="h3 mb-0">Panel de Administración</h1>
-                <a href="index.html" class="btn btn-outline-light">Salir</a>
-            </div>
-        </header>
 
-        <main class="container py-5">
-            <div class="row">
-                <nav class="col-md-3">
-                    <div class="d-flex flex-column admin-nav">
-                        <a href="admin.html" class="nav-link btn btn-primary text-start">Dashboard</a>
-                        <a href="admin-productos.html" class="nav-link btn btn-secondary text-start">Gestión de Productos</a>
-                        <a href="admin-blogs.html" class="nav-link btn btn-secondary text-start">Gestión de Blogs</a>
-                        <a href="admin-usuarios.html" class="nav-link btn btn-secondary text-start">Gestión de Usuarios</a>
-                    </div>
-                </nav>
-
-                <section class="col-md-9">
-                    <h2 class="mb-4">Dashboard</h2>
-                    <p class="lead">
-                        Bienvenido al panel de administración. Aquí puedes gestionar todos los aspectos de tu tienda en línea.
-                    </p>
-                    <div class="row g-4">
-                        <div class="col-md-6 col-lg-4">
-                            <div class="card text-center shadow-sm">
-                                <div class="card-body">
-                                    <h5 class="card-title">Productos</h5>
-                                    <p class="card-text fs-4 fw-bold">120</p>
-                                    <a href="admin-productos.html" class="btn btn-primary">Gestionar</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-6 col-lg-4">
-                            <div class="card text-center shadow-sm">
-                                <div class="card-body">
-                                    <h5 class="card-title">Blogs</h5>
-                                    <p class="card-text fs-4 fw-bold">25</p>
-                                    <a href="admin-blogs.html" class="btn btn-primary">Gestionar</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-6 col-lg-4">
-                            <div class="card text-center shadow-sm">
-                                <div class="card-body">
-                                    <h5 class="card-title">Usuarios</h5>
-                                    <p class="card-text fs-4 fw-bold">500</p>
-                                    <a href="admin-usuarios.html" class="btn btn-primary">Gestionar</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </section>
-            </div>
-        </main>
-
-        <footer class="bg-dark text-white text-center py-3 mt-5">
-            <p>&copy; 2024 Panel de Administración. Todos los derechos reservados.</p>
-        </footer>
+  <header class="bg-dark text-white p-3 sticky-top">
+    <div class="container d-flex justify-content-between align-items-center">
+      <h1 class="h4 mb-0"><i class="bi bi-speedometer2 me-2"></i>Panel de Administración</h1>
+      <a href="index.html" class="btn btn-outline-light btn-sm"><i class="bi bi-box-arrow-right me-1"></i>Salir</a>
     </div>
+  </header>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+  <div class="container-fluid">
+    <div class="row">
+      <nav class="col-md-3 col-lg-2 bg-light p-3 border-end min-vh-100">
+        <ul class="nav flex-column admin-nav">
+          <li class="nav-item">
+            <a href="admin.html" class="nav-link btn btn-primary text-start"><i class="bi bi-speedometer2 me-2"></i>Dashboard</a>
+          </li>
+          <li class="nav-item">
+            <a href="admin-productos.html" class="nav-link btn btn-secondary text-start"><i class="bi bi-box-seam me-2"></i>Gestión de Productos</a>
+          </li>
+          <li class="nav-item">
+            <a href="admin-blogs.html" class="nav-link btn btn-secondary text-start"><i class="bi bi-journal-text me-2"></i>Gestión de Blogs</a>
+          </li>
+          <li class="nav-item">
+            <a href="admin-usuarios.html" class="nav-link btn btn-secondary text-start"><i class="bi bi-people me-2"></i>Gestión de Usuarios</a>
+          </li>
+        </ul>
+      </nav>
+      <main class="col-md-9 col-lg-10 p-4">
+        <h2 class="mb-4">Dashboard</h2>
+        <p class="lead">Bienvenido al panel de administración. Aquí puedes gestionar todos los aspectos de tu tienda en línea.</p>
+
+        <div class="row g-4">
+          <div class="col-md-6 col-lg-4">
+            <div class="card text-center shadow-sm">
+              <div class="card-body">
+                <i class="bi bi-box-seam display-4 text-primary"></i>
+                <h5 class="card-title mt-2">Productos</h5>
+                <p class="card-text fs-4 fw-bold">120</p>
+                <a href="admin-productos.html" class="btn btn-primary">Gestionar</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-4">
+            <div class="card text-center shadow-sm">
+              <div class="card-body">
+                <i class="bi bi-journal-text display-4 text-success"></i>
+                <h5 class="card-title mt-2">Blogs</h5>
+                <p class="card-text fs-4 fw-bold">25</p>
+                <a href="admin-blogs.html" class="btn btn-primary">Gestionar</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-4">
+            <div class="card text-center shadow-sm">
+              <div class="card-body">
+                <i class="bi bi-people display-4 text-warning"></i>
+                <h5 class="card-title mt-2">Usuarios</h5>
+                <p class="card-text fs-4 fw-bold">500</p>
+                <a href="admin-usuarios.html" class="btn btn-primary">Gestionar</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </main>
+    </div>
+  </div>
+
+  <footer class="bg-dark text-white text-center py-3 mt-5">
+    <p class="mb-0">&copy; 2025 Panel de Administración. Todos los derechos reservados.</p>
+  </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
