--- a/AdminProductos.html
+++ b/AdminProductos.html
@@ -1,94 +1,99 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gestión de Productos - Panel de Administración</title>
-
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
-    <link rel="stylesheet" href="style.css">
-    <style>
-        .admin-nav .nav-link {
-            font-size: 1.25rem;
-            margin-bottom: 1rem;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Gestión de Productos - Panel de Administración</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container-fluid">
-        <header class="bg-dark text-white p-3">
-            <div class="d-flex justify-content-between align-items-center">
-                <h1 class="h3 mb-0">Panel de Administración</h1>
-                <a href="index.html" class="btn btn-outline-light">Salir</a>
-            </div>
-        </header>
-
-        <main class="container py-5">
-            <div class="row">
-                <nav class="col-md-3">
-                    <div class="d-flex flex-column admin-nav">
-                        <a href="admin.html" class="nav-link btn btn-secondary text-start">Dashboard</a>
-                        <a href="admin-productos.html" class="nav-link btn btn-primary text-start">Gestión de Productos</a>
-                        <a href="admin-blogs.html" class="nav-link btn btn-secondary text-start">Gestión de Blogs</a>
-                        <a href="admin-usuarios.html" class="nav-link btn btn-secondary text-start">Gestión de Usuarios</a>
-                    </div>
-                </nav>
-
-                <section class="col-md-9">
-                    <h2 class="mb-4">Gestión de Productos</h2>
-                    <div class="d-flex justify-content-end mb-3">
-                        <button class="btn btn-success">Agregar Nuevo Producto</button>
-                    </div>
-                    <div class="table-responsive">
-                        <table class="table table-striped table-hover align-middle">
-                            <thead class="table-dark">
-                                <tr>
-                                    <th scope="col">ID</th>
-                                    <th scope="col">Nombre</th>
-                                    <th scope="col">Categoría</th>
-                                    <th scope="col">Precio</th>
-                                    <th scope="col">Stock</th>
-                                    <th scope="col">Acciones</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <th scope="row">1</th>
-                                    <td>Polerón Superhéroe</td>
-                                    <td>Ropa</td>
-                                    <td>$24.990</td>
-                                    <td>15</td>
-                                    <td>
-                                        <button class="btn btn-warning btn-sm">Editar</button>
-                                        <button class="btn btn-danger btn-sm">Eliminar</button>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <th scope="row">2</th>
-                                    <td>Control PS5</td>
-                                    <td>Juguetes</td>
-                                    <td>$59.990</td>
-                                    <td>8</td>
-                                    <td>
-                                        <button class="btn btn-warning btn-sm">Editar</button>
-                                        <button class="btn btn-danger btn-sm">Eliminar</button>
-                                    </td>
-                                </tr>
-                                </tbody>
-                        </table>
-                    </div>
-                </section>
-            </div>
-        </main>
-
-        <footer class="bg-dark text-white text-center py-3 mt-5">
-            <p>&copy; 2024 Panel de Administración. Todos los derechos reservados.</p>
-        </footer>
+  <header class="bg-dark text-white p-3 sticky-top">
+    <div class="container d-flex justify-content-between align-items-center">
+      <h1 class="h4 mb-0"><i class="bi bi-box-seam me-2"></i>Gestión de Productos</h1>
+      <a href="index.html" class="btn btn-outline-light btn-sm"><i class="bi bi-box-arrow-right me-1"></i>Salir</a>
     </div>
-    
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <script src="admin.js"></script>
-    
+  </header>
+
+  <div class="container-fluid">
+    <div class="row">
+      <nav class="col-md-3 col-lg-2 bg-light p-3 border-end min-vh-100">
+        <ul class="nav flex-column admin-nav">
+          <li class="nav-item">
+            <a href="admin.html" class="nav-link btn btn-secondary text-start"><i class="bi bi-speedometer2 me-2"></i>Dashboard</a>
+          </li>
+          <li class="nav-item">
+            <a href="admin-productos.html" class="nav-link btn btn-primary text-start"><i class="bi bi-box-seam me-2"></i>Gestión de Productos</a>
+          </li>
+          <li class="nav-item">
+            <a href="admin-blogs.html" class="nav-link btn btn-secondary text-start"><i class="bi bi-journal-text me-2"></i>Gestión de Blogs</a>
+          </li>
+          <li class="nav-item">
+            <a href="admin-usuarios.html" class="nav-link btn btn-secondary text-start"><i class="bi bi-people me-2"></i>Gestión de Usuarios</a>
+          </li>
+        </ul>
+      </nav>
+      <main class="col-md-9 col-lg-10 p-4">
+        <h2 class="mb-4">Lista de Productos</h2>
+        <div class="mb-3">
+          <a href="admin-productos-nuevo.html" class="btn btn-success"><i class="bi bi-plus-circle me-1"></i>Agregar Producto</a>
+        </div>
+        <div class="table-responsive">
+          <table class="table table-striped table-hover align-middle">
+            <thead class="table-dark">
+              <tr>
+                <th>ID</th>
+                <th>Nombre</th>
+                <th>Categoría</th>
+                <th>Precio</th>
+                <th>Stock</th>
+                <th>Acciones</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>001</td>
+                <td>Polerón Negro</td>
+                <td>Ropa</td>
+                <td>$19.990</td>
+                <td>15</td>
+                <td>
+                  <a href="#" class="btn btn-warning btn-sm"><i class="bi bi-pencil-square"></i></a>
+                  <a href="#" class="btn btn-danger btn-sm"><i class="bi bi-trash"></i></a>
+                </td>
+              </tr>
+              <tr>
+                <td>002</td>
+                <td>Funko Pop Squirtle</td>
+                <td>Juguetes</td>
+                <td>$12.990</td>
+                <td>30</td>
+                <td>
+                  <a href="#" class="btn btn-warning btn-sm"><i class="bi bi-pencil-square"></i></a>
+                  <a href="#" class="btn btn-danger btn-sm"><i class="bi bi-trash"></i></a>
+                </td>
+              </tr>
+              <tr>
+                <td>003</td>
+                <td>PlayStation 5 Digital</td>
+                <td>Tecnología</td>
+                <td>$589.990</td>
+                <td>5</td>
+                <td>
+                  <a href="#" class="btn btn-warning btn-sm"><i class="bi bi-pencil-square"></i></a>
+                  <a href="#" class="btn btn-danger btn-sm"><i class="bi bi-trash"></i></a>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </main>
+    </div>
+  </div>
+  <footer class="bg-dark text-white text-center py-3 mt-5">
+    <p class="mb-0">&copy; 2025 Panel de Administración. Todos los derechos reservados.</p>
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
