--- a/registro.html
+++ b/registro.html
@@ -52,7 +52,7 @@
       <div class="row justify-content-center">
         <div class="col-lg-7 col-md-8">
           <div class="card p-4 shadow-sm">
-            <form method="post" action="#">
+            <form id="form-registro">
               <div class="row g-3">
                 <div class="col-md-6">
                   <label for="nombre" class="form-label">Nombre</label>
@@ -109,5 +109,6 @@
     <p class="mb-0">&copy; 2025 Lo quieres, te lo vendo. Todos los derechos reservados.</p>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="admin.js"></script>
 </body>
 </html>
